--- a/package.json
+++ b/package.json
@@ -24,7 +24,16 @@
     "docs:build": "node ./src/docs/generator/index.js",
     "docs:watch": "nodemon ./src/docs/generator/index.js"
   },
-  "keywords": [],
+  "keywords": [
+    "particles",
+    "particle",
+    "particles-js",
+    "particle-ts",
+    "ts-particles",
+    "ts-particle",
+    "javascript particles",
+    "typescript particles"
+  ],
   "author": "Miriam Zusin <miriam.zusin@gmail.com>",
   "repository": {
     "type": "git",
@@ -50,5 +59,9 @@
   },
   "devDependencies": {
     "esbuild": "^0.17.17"
+  },
+  "dependencies": {
+    "mz-canvas": "^1.0.1",
+    "mz-math": "^3.0.6"
   }
 }
