--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "type": "git",
     "url": "https://github.com/mzusin/mz-particles"
   },
-  "license": "SEE LICENSE IN LICENSE.md",
+  "license": "MIT",
   "browserslist": [
     ">0.2%",
     "not dead",
