--- a/package.json
+++ b/package.json
@@ -60,11 +60,15 @@
     "ext": "js,json,html,css,md,ts,tsx,glsl"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "esbuild": "^0.17.17",
-    "markdown-documentation-maker": "^1.0.22"
+    "eslint": "^8.39.0",
+    "markdown-documentation-maker": "^1.0.22",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "mz-canvas": "^1.0.8",
+    "mz-canvas": "^1.0.10",
     "mz-math": "^3.0.8",
     "mz-svg": "^1.0.10"
   }
