--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ext": "js,json,html,css,md,ts,tsx,glsl"
   },
   "devDependencies": {
+    "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "esbuild": "^0.17.17",
@@ -70,6 +71,7 @@
   "dependencies": {
     "mz-canvas": "^1.0.10",
     "mz-math": "^3.0.8",
-    "mz-svg": "^1.0.10"
+    "mz-svg": "^1.0.10",
+    "tinycolor2": "^1.6.0"
   }
 }
