--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mz-particles",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "TypeScript library for creating particle effects on canvas.",
   "type": "module",
   "types": "./dist/index.d.ts",
@@ -60,11 +60,13 @@
     "ext": "js,json,html,css,md,ts,tsx,glsl"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.7",
     "@types/tinycolor2": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "esbuild": "^0.17.17",
     "eslint": "^8.39.0",
+    "lodash-es": "^4.17.21",
     "markdown-documentation-maker": "^1.0.22",
     "mz-canvas": "^1.0.13",
     "mz-math": "^3.0.8",
